EmpathyApp: Use GAction to pass the command-line to main instance

https://bugzilla.gnome.org/show_bug.cgi?id=697197